Changes for CCD integration..